--- a/sass/_mixins.sass
+++ b/sass/_mixins.sass
@@ -9,3 +9,6 @@
     display: flex
     align-items: center
     justify-content: center
+
+@mixin bg-img($img)
+    background-image: url('../img') // imagem dinamica 
