--- a/sass/styles.css
+++ b/sass/styles.css
@@ -96,6 +96,4 @@ body ul {
 }
 .gallery #card-2 {
   background-image: url("../img");
-}
-
-/*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
